--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.3.2",
+    "react-ions": "^5.0.5",
     "react-moment": "^0.7.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
